# polariton

./: Cargo.toml  README.md
res/data/: test.sqlite
src/: main.rs  persistence.rs
src/adapters/: bigquery.rs  common.rs  driver.rs  mod.rs  mysql.rs  parquet.rs  postgres.rs  sqlite.rs
src/editor/: analysis.rs  command.rs  coords.rs  core.rs  folding.rs  highlight.rs  mod.rs  search.rs  theme.rs  undo.rs  widget.rs  wrap.rs
src/editor/buffer/: core.rs  mod.rs  state.rs
src/editor/vim/: command.rs  core.rs  mod.rs  normal.rs  operator.rs  visual.rs
src/fonts/: core.rs  mod.rs
src/gui/: colors.rs  components.rs  messages.rs  mod.rs  plot_state.rs  state.rs  table.rs
src/gui/menu/: core.rs  geometry.rs  interaction.rs  mod.rs  model.rs  state.rs
src/gui/statusbar/: core.rs  mod.rs  spinner.rs
src/plot/: common.rs  export.rs  mod.rs
src/plot/kernels/: bar.rs  boxplot.rs  bubble.rs  candlestick.rs  fill_between.rs  funnel.rs  heatmap.rs  hexbin.rs  histogram.rs  line.rs  parallel.rs  pie.rs  radar.rs  radial_dial.rs  scatter.rs  stacked_area.rs  stacked_bar.rs  violin.rs
