[package]
name = "polariton"
version = "0.1.0"
edition = "2024"
resolver = "3"
authors = ["Joel Bondurant"]
description = "A strong coupling of data and visualization."


[dependencies]
argon2 = "0.5"
async-trait = "0.1.89"
chacha20poly1305 = "0.10"
bytes = "1.11.1"
chrono = "0.4.41"
fontdb = "0.23.0"
iced = { version = "0.14.0", features = ["advanced", "canvas", "tokio"] }
iced-code-editor = "0.3.7"
iced_aw = { version = "0.13.0", default-features = false, features = ["menu"] }
kurbo = "0.13.0"
png = "0.18.1"
polars = { version = "0.53.0", features = ["lazy", "parquet", "sql"] }
rand = "0.10.0"
rand_distr = "0.6.0"
ravif = { version = "0.13.0", default-features = false, features = ["threading"] }
resvg = "0.47.0"
sqlparser = "0.61.0"
svg_fmt = "0.4.5"
tiny-skia = "0.12.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = "0.7.16"
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio-stream = "0.1.18"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
