[package]
name = "polariton"
version = "0.1.0"
edition = "2024"
resolver = "3"
authors = ["Joel Bondurant"]
description = "A strong coupling of data and visualization."


[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
bytes = "1.11.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
fontdb = "0.23.0"
gcloud-auth = { version = "1.3.0", default-features = false, features = ["rustls-tls", "jwt-rust-crypto"] }
gcloud-bigquery = { version = "1.6.0", default-features = false, features = ["auth", "rustls-tls", "jwt-rust-crypto"] }
gcloud-gax = "1.4.0"
gcloud-googleapis = { version = "1.3.0", features = ["bigquery"] }
iced = { version = "0.14.0", features = ["advanced", "canvas", "tokio"] }
iced-code-editor = "0.3.7"
iced_aw = { version = "0.13.0", default-features = false, features = ["menu"] }
kurbo = "0.13.0"
png = "0.18.1"
polars = { version = "0.53.0", features = ["lazy", "parquet", "sql", "ipc_streaming"] }
rand = "0.10.0"
rand_distr = "0.6.0"
ravif = { version = "0.13.0", default-features = false, features = ["threading"] }
resvg = "0.47.0"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
sqlparser = "0.61.0"
svg_fmt = "0.4.5"
tiny-skia = "0.12.0"
tokio = { version = "1.50.0", features = ["full"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
tokio-postgres = "0.7.16"
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio-stream = "0.1.18"



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
